--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
     display: flex;
-    justify-content: center;
+/*     justify-content: center; */
     align-items: center;
     height: 100vh;
     margin: 0;
     background-color: #f7a2a2;
-    
+    padding-left: 5cm;
 }
 
 .gallery{
